--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,4 @@ License: GPL (>= 3)
 URL: https://github.com/fsavje/gswdesign-R
 BugReports: https://github.com/fsavje/gswdesign-R/issues
 Encoding: UTF-8
+RoxygenNote: 7.0.2
