--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: r
 cache: packages
 
-os:
-  - linux
-  - osx
-
 env:
   - JULIA="10"
   - JULIA="11"
@@ -34,27 +30,18 @@ r_packages:
 before_install:
   - mkdir -p ~/Downloads
 
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "10" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "11" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.1/julia-1.1-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "12" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.2/julia-1.2-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "13" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.3/julia-1.3-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ $JULIA == "10" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ $JULIA == "11" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.1/julia-1.1-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ $JULIA == "12" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.2/julia-1.2-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ $JULIA == "13" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.3/julia-1.3-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
 
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then tar xzf "$HOME/Downloads/julia.tar.gz" -C "$HOME/Downloads"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cp -r "$(find "$HOME/Downloads" -maxdepth 2 -name "julia*" -type d | head -n 1)" "$HOME/julia"; fi
-
-  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "10" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.0/julia-1.0-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "11" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.1/julia-1.1-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "12" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.2/julia-1.2-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "13" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.3/julia-1.3-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
-
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil attach ~/Downloads/julia.dmg; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then cp -r /Volumes/Julia*/Julia*/Contents/Resources/julia $HOME/julia; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil detach -force /Volumes/Julia*; fi
+  - tar xzf "$HOME/Downloads/julia.tar.gz" -C "$HOME/Downloads"
+  - cp -r "$(find "$HOME/Downloads" -maxdepth 2 -name "julia*" -type d | head -n 1)" "$HOME/julia"
 
   - rm -rf ~/Downloads/julia*
   - export PATH="$HOME/julia/bin:$PATH"
 
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
+  - export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"
 
 after_success:
   - Rscript -e 'library(covr); codecov()'
