--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ sudo: false
 language: r
 cache: packages
 
-env:
-  - JULIA="13"
-
 r:
   - oldrel
   - release
   - devel
+  - 4.0.2
+  - 4.0.1
+  - 4.0.0
+  - 3.6.3
   - 3.6.2
   - 3.6.1
   - 3.6.0
@@ -25,7 +26,7 @@ addons:
 before_install:
   - mkdir -p ~/Downloads
 
-  - if [ $JULIA == "13" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.3/julia-1.3-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.3/julia-1.3-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"
 
   - tar xzf "$HOME/Downloads/julia.tar.gz" -C "$HOME/Downloads"
   - cp -r "$(find "$HOME/Downloads" -maxdepth 2 -name "julia*" -type d | head -n 1)" "$HOME/julia"
